Fixed issue with modal backdrop sliding off screen briefly on mobile
Had to make the dialog backdrop longer so that it didn't slide off screen while on mobile

--- a/src/styles/_watchlistmodal.scss
+++ b/src/styles/_watchlistmodal.scss
@@ -124,4 +124,5 @@ dialog:not([open]) {
 
 dialog::backdrop {
   backdrop-filter: blur(0.25rem);
+  height: 2000px;
 }
